# survex-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: general.yml
src/: data.rs  lib.rs  point.rs  read.rs  station.rs  survex.rs
tests/data/: 0733.3d  nottsii.3d
