[package]
name = "survex-rs"
description = "Rust bindings for the Survex 3D image processor."
license = "GPL-3.0-only"
repository = "https://github.com/anorthall/survex-rs"
homepage = "https://github.com/anorthall/survex-rs"
readme = "README.md"
authors = ["Andrew Northall <andrew@northall.me.uk>"]
keywords = ["caving", "caves", "cave-survey", "survex", "bindings"]
categories = ["api-bindings", "external-ffi-bindings", "science::geo"]
version = "0.1.7"
edition = "2021"
include = ["**/*.rs", "lib/**/*", "Cargo.toml", "README.md", "LICENCE"]

[dependencies]
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
petgraph = "0.6.3"
log = "0.4"

[build-dependencies]
bindgen = "0.68.1"
